--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hris",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "via mare hris web application",
   "main": "server.js",
   "scripts": {
@@ -18,6 +18,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.1.5",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "mongoose-sequence": "^5.3.1",
     "uuid": "^9.0.1"
