--- a/FRONTEND/vm_hris/package.json
+++ b/FRONTEND/vm_hris/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vm_hris",
-  "version": "2.1.9",
+  "version": "2.1.10",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.0",
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
