--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hris",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "via mare hris web application",
   "main": "server.js",
   "scripts": {
@@ -17,7 +17,7 @@
     "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "express-async-handler": "^1.2.0",
+    "express-async-errors": "^3.1.1",
     "express-rate-limit": "^7.1.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
