--- a/FRONTEND/vm_hris/package.json
+++ b/FRONTEND/vm_hris/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vm_hris",
-  "version": "2.1.10",
+  "version": "2.1.11",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.0",
@@ -19,6 +19,7 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.4"
   },
