--- a/FRONTEND/vm_hris/package.json
+++ b/FRONTEND/vm_hris/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vm_hris",
-  "version": "2.1.19",
+  "version": "2.1.20",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
     "jwt-decode": "^4.0.0",
+    "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-country-region-selector": "^3.6.1",
