--- a/FRONTEND/vm_hris/package.json
+++ b/FRONTEND/vm_hris/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-country-region-selector": "^3.6.1",
+    "react-date-picker": "^10.6.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.20.0",
