--- a/FRONTEND/vm_hris/package.json
+++ b/FRONTEND/vm_hris/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
     "jwt-decode": "^4.0.0",
+    "nodemailer": "^6.9.8",
     "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
@@ -25,6 +26,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
+    "serve": "^14.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
