--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -22,6 +22,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
     "mongoose-sequence": "^5.3.1",
+    "nodemailer": "^6.9.9",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
