fixed a bug in credit auto update re-execution
I also included a disclaimer text at the generated document.

also facing issues regarding proper attendance data placement for printing

--- a/FRONTEND/vm_hris/.vscode/launch.json
+++ b/FRONTEND/vm_hris/.vscode/launch.json
@@ -5,9 +5,9 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "chrome",
+            "type": "msedge",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
+            "name": "Launch Edge against 192.168.1.6:3000",
             "url": "http://192.168.1.6:3000",
             "webRoot": "${workspaceFolder}"
         }
