--- a/FRONTEND/vm_hris/package.json
+++ b/FRONTEND/vm_hris/package.json
@@ -7,12 +7,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fvilers/disable-react-devtools": "^1.3.0",
+    "@pdf-lib/fontkit": "^1.1.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
+    "file-base64": "^1.0.0",
     "jwt-decode": "^4.0.0",
     "nodemailer": "^6.9.8",
     "pdf-lib": "^1.17.1",
@@ -30,7 +32,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "cross-env GENERATE_SOURCEMAP=false react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -52,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3"
   }
 }
